infrastucture/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: tca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: oldrick/api-gateway
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: tca
spec:
  ports:
    - port: 8000
      targetPort: 8080
  selector:
    app: gateway
  type: NodePort  # Change to LoadBalancer or ClusterIP if required
