infrastucture/k8s/projects.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projects
  namespace: tca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: projects
  template:
    metadata:
      labels:
        app: projects
    spec:
      containers:
        - name: projects
          image: oldrick/projects
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: projects
  namespace: tca
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: projects
