infrastucture/k8s/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: tca
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          ports:
            - containerPort: 5672
            - containerPort: 15672
          livenessProbe:
            exec:
              command:
                - rabbitmqctl
                - status
            initialDelaySeconds: 10
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: tca
spec:
  ports:
    - port: 5672
      targetPort: 5672
      name: amqp  # Add a name for this port (e.g., amqp)
    - port: 15672
      targetPort: 15672
      name: management  # Add a name for this port (e.g., management)
  selector:
    app: rabbitmq
